--- a/jms/perm/templates/perm/detail.html
+++ b/jms/perm/templates/perm/detail.html
@@ -42,7 +42,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for asset in perm.asserts.all %}
+            {% for asset in perm.assets.all %}
                 <tr>
                     <td>{{ asset.hostname }}</td>
                     <td>{{ asset.ip }}</td>
