--- a/jms/perm/templates/perm/list.html
+++ b/jms/perm/templates/perm/list.html
@@ -26,7 +26,7 @@
       <tr>
           <td>{{ p.name }}</td>
           <td>{{ p.user.count }}</td>
-          <td>{{ p.asserts.count }}</td>
+          <td>{{ p.assets.count }}</td>
           <td>{{ p.remark }}</td>
           <td>
                 <i class="remove blue icon" href="{% url 'perm:delete' p.id %}"></i>
